--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #Gradle properties
 quarkusPluginId=io.quarkus
-quarkusPluginVersion=2.11.2.Final
+quarkusPluginVersion=3.28.1
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=2.11.2.Final
+quarkusPlatformVersion=3.28.1
